App images in directory

--- a/app-images/lucky-number/Dockerfile
+++ b/app-images/lucky-number/Dockerfile
@@ -4,6 +4,6 @@ FROM python:3.10
 RUN pip install flask
 RUN pip install requests
 
-COPY generator.py /
+COPY lucky_number.py /
 
-CMD ["python3", "generator.py"]
+CMD ["python3", "/lucky_number.py"]
