--- a/01-basic-example/deployment.yaml
+++ b/01-basic-example/deployment.yaml
@@ -1,22 +1,30 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: lucky-number-app
+  labels:
+    istio-injection: enabled
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-app
+  name: lucky-number
+  namespace: lucky-number-app
   labels:
-    app: web-app
+    app: lucky-number
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: web-app
+      app: lucky-number
   template:
     metadata:
       labels:
-        app: web-app
+        app: lucky-number
     spec:
       containers:
-      - name: web-app
-        image: yoavklein3/web-app:0.1
+      - name: lucky-number
+        image: yoavklein3/lucky-number:0.1
         env:
           - name: GENERATOR_HOST
             value: generator
@@ -28,7 +36,8 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: generator
+  name: generator-v1
+  namespace: lucky-number-app
   labels:
     app: generator
 spec:
@@ -36,10 +45,12 @@ spec:
   selector:
     matchLabels:
       app: generator
+      version: v1
   template:
     metadata:
       labels:
         app: generator
+        version: v1
     spec:
       containers:
       - name: generator
@@ -47,13 +58,39 @@ spec:
         ports:
         - containerPort: 5000
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  namespace: lucky-number-app
+  name: generator-v2
+  labels:
+    app: generator
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: generator
+      version: v2
+  template:
+    metadata:
+      labels:
+        app: generator
+        version: v2
+    spec:
+      containers:
+      - name: generator
+        image: yoavklein3/generator:0.2
+        ports:
+        - containerPort: 5000
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: web-app
+  name: lucky-number
+  namespace: lucky-number-app
 spec:
   selector:
-    app: web-app
+    app: lucky-number
   ports:
     - protocol: TCP
       port: 80
@@ -63,6 +100,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: generator
+  namespace: lucky-number-app
 spec:
   selector:
     app: generator
