--- a/app-images/numbers-generator/Dockerfile
+++ b/app-images/numbers-generator/Dockerfile
@@ -6,6 +6,6 @@ ARG version
 RUN pip install flask
 RUN pip install requests
 
-COPY generator-v${version}.py /generator.py
+COPY numbers_generator_v${version}.py /generator.py
 
 CMD ["python3", "generator.py"]
