--- a/06-observability/01-telemetry-api/telemetry-cpy.yaml
+++ b/06-observability/01-telemetry-api/telemetry-cpy.yaml
@@ -19,8 +19,8 @@ spec:
             destination_x:
               value: filter_state.downstream_peer.app
             uri_path:
-              value: string("my/request/path").split('/')
-              #value: request.url_path
+                #value: string("my/request/path").split('/').join('?')
+                value: request.url_path
         - match:
             mode: CLIENT_AND_SERVER
             metric: REQUEST_DURATION
